fixed site back up to including fonts and spacing

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,8 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+:root {
+    /* change the values below to your colors from your palette */
+    --primary-color: #386641;
+    --secondary-color: #6a994e;
+    --accent1-color: #a7c957;
+    --accent2-color: #f2e8cf;
+    --button-background: rgb(16, 234, 52);
+
+    /* change the values below to your chosen font(s) */
+    --heading-font: "Rock Salt", arial, serif;
+    --paragraph-font: "Roboto", Helvetica, sans-serif;
+}
+
+body {
+    background-color: var(--primary-color); 
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+    font-family: var(--paragraph-font);
+}
+h2{
+    margin: 0;
+}
+h4{
+    color:var(--secondary-color);
+}
 #content{
     margin: 0 auto;
     max-width: 1600px;
-    text-align: center;
 }
+
+header {
+    background-color:#6a994e;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+.logo{
+    width:80px;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
@@ -13,86 +54,77 @@ nav a{
     text-decoration: none;
     padding: 35px;
 }
+nav a:hover {
+    background-color: #6a994e;
+}
+
+#hero-img {
+    width: 100%;
+}
 #hero-msg h1, #hero-msg h4{
     text-align: center;
+}
+
+.home-title{
+    color:#6a994e;
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
 }
 .button-box{
     text-align: center;
 }
-main section{
-    text-align: center;
-}
-#background{
-    height: 725px;
-    color:#f2e8cf;
-}
-body {
-    background-color: #f2e8cf; 
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-h2{
-    margin: 0;
-}
-header {
-    background-color:#6a994e;
-    display: grid;
-    grid-template-columns: 150px auto;
-}
-nav a:hover {
-    background-color: #6a994e;
-}
-.book{
-    background-color:#f2e8cf;
+.book, .join{
+    background-color: var(--button-background);
     text-decoration: none;
     font-size: 18px;
     padding: 15px;
     margin-top: 50px;
     border-radius: 5px;
 }
-.join{
-    background-color: #6a994e;
-    text-decoration: none;
-    font-size: 18px;
-    padding:30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.book:hover{
-    background-color:rgb(16, 234, 52)
+.book:hover, .join:hover{
+    background-color:#f2e8cf;
 } 
-.join:hover{
-    background-color: #ffff;
+
+main section{
+    text-align: center;
 }
+main section img {
+    box-sizing: border-box;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.icon{
+    width:80px;
+    padding-top: 10px;
+}
+#background{
+    height: 725px;
+    color:#f2e8cf;
+    background-color: #d9c2a3;
+}
+
 .msg{
     background-color: #6a994e;
     line-height: 1.5em;
     padding: 35px;
 }
-footer{
-    background-color:  #386641;
-}
-.home-title{
-    color:#386641;
-    font-family: 'Rock Salt';
-    font-size: 2em;
-    margin-top: 10px;
-}
-h4{
-    color:#6a994e;
-}
 .msg h2{
     color:#f2e8cf;
-    font-family: 'Rock Salt'
+    font-family: var(--heading-font);
 }
 .msg p{
     color: #f2e8cf;
     font-size: .8em;
     padding-bottom: 15px;
 }
+
 footer{
+    background-color:#6a994e;
     color:#f2e8cf;
     padding: 25px 50px;
     margin-top: 200px;
@@ -104,18 +136,6 @@ footer a{
 footer a:hover{
     background-color:#f2e8cf;
 }
-.logo{
-    width:80px;
-}
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
-.icon{
-    width:80px;
-    padding-top: 10px;
-}
 footer p {
     font-size: 1.2em;
 }
@@ -125,13 +145,4 @@ footer p a:hover {
 
 footer .social img{
     padding-top:15px;
-}
-.rivers-card, .camping-card, .rapids-card{
-       margin: 200px 0;
-}
-.card-img {
-    border: 10px solid #d9c2a3;
-}
-main section img {
-    box-sizing: border-box;
 }
